[backend] Add test