@@ -130,10 +130,11 @@ public class ScenarioService {
     if (!hasText(scenario.getFrom())) {
       if (this.imapEnabled) {
         scenario.setFrom(this.imapUsername);
-        scenario.setReplyTos(List.of(this.imapUsername));
+        scenario.setReplyTos(new ArrayList<>(Arrays.asList(this.imapUsername)));
       } else {
         scenario.setFrom(this.openBASConfig.getDefaultMailer());
-        scenario.setReplyTos(List.of(this.openBASConfig.getDefaultReplyTo()));
+        scenario.setReplyTos(
+            new ArrayList<>(Arrays.asList(this.openBASConfig.getDefaultReplyTo())));
       }
     }
   }
